--- a/wisccc/templates/wisccc/wisc_cc_scenario.html
+++ b/wisccc/templates/wisccc/wisc_cc_scenario.html
@@ -1197,14 +1197,14 @@
                     ", based on the estimated tons of biomass produced and the forage quality as measured by RFQ. " +
                     "We use the Hay Market Report to estimated the price of this forage by assuming the average price for a large round bale of hay. " +
                     "The estimated income from the hay is then divided by seed and planting costs. " +
-                    "These estimates are based on a sample of the cover crop from a 2ft by 2ft square." +
-                    // Debug
-                    "<br>" +
-                    "RFQ: " + fieldRecord.properties.spring_fq_rfq + "<br>" +
-                    "Tons biomass: " + fieldRecord.properties.spring_cc_biomass + "<br>" +
-                    "Price per ton: " + calcPricePerTon(fieldRecord.properties.spring_fq_rfq, fieldRecord.properties.year, season = "spring") + "<br>" +
-                    "Seed cost: " + fieldRecord.properties.cover_crop_seed_cost + "<br>" +
-                    "Planting cost: " + fieldRecord.properties.cover_crop_planting_cost;
+                    "These estimates are based on a sample of the cover crop from a 2ft by 2ft square.";
+                // Debug
+                // "<br>" +
+                // "RFQ: " + fieldRecord.properties.spring_fq_rfq + "<br>" +
+                // "Tons biomass: " + fieldRecord.properties.spring_cc_biomass + "<br>" +
+                // "Price per ton: " + calcPricePerTon(fieldRecord.properties.spring_fq_rfq, fieldRecord.properties.year, season = "spring") + "<br>" +
+                // "Seed cost: " + fieldRecord.properties.cover_crop_seed_cost + "<br>" +
+                // "Planting cost: " + fieldRecord.properties.cover_crop_planting_cost;
 
                 break;
             case "graze_fall":
